# egui_ext

./: Cargo.toml  README.adoc  README.md
.github/workflows/: rust.yml
src/: collapsing_button.rs  color.rs  dark_light_mode_switch.rs  download.rs  dropped_file.rs  hovered_file.rs  label.rs  labeled_separator.rs  lib.rs  light_dark_button.rs  markdown.rs  response.rs  table.rs  ui copy.rs  ui.rs  with_visuals.rs
src/ui/: doi.rs  markdown.rs  mod.rs
src/widgets/: doi.rs  mod.rs
